Fixed top top-margin so it looks good on mobile devices.

--- a/css/main.css
+++ b/css/main.css
@@ -48,7 +48,7 @@ a:hover {
   max-width: 1000px;
   margin: 0 auto;
   background-color: #FEE169;
-  margin-top: 2.3em;
+  margin-top: 2.32em;
   overflow: hidden;
 }
 
